--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <h1 class="section-title position-relative text-center mb-5">Clients Say About Our Famous Ice Cream</h1>
+                    <h1 class="section-title position-relative text-center mb-5">Clients Say About Our Famous Green Store</h1>
                 </div>
             </div>
             <div class="row justify-content-center">
