--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                     <h4 class="font-weight-bold mb-3"></h4>
                     <p ><i>Thứ ba, được làm từ nguồn nguyên liệu ít gây hại tới tự nhiên. Nghĩa là quá trình sản xuất phải sử dụng ít tài nguyên. Ví dụ như các đồ dùng làm từ tre – loại cây có sức sống mãnh liệt, tự mọc, không cần bón phân, ít sử dụng tài nguyên.</i></p>
              <p><i>Thứ tư, không gây hại tới sức khỏe. Các sản phẩm không chứa chất độc hại, các chất hóa học gây hại tới sức khỏe và hệ sinh thái (làm ô nhiễm môi trường nước, đất, không khí…). Và đặc biệt, có thể dễ dàng tái chế</i></p>
-                   
+                    <p><i>Bảo vệ môi trường chính là bảo vệ cuộc sống của tất cả chúng ta, đây là nghĩa vụ và trách nhiệm, cũng là quyền và nghĩa vụ của tất cả mọi người trên hành tinh này. Hãy chung tay bảo vệ môi trường, làm xanh thế giới cho bạn, cho tôi, cho những người thân yêu xung quanh chúng ta.
+</i></p>
+ <p><i>Hi vọng những thông điệp ý nghĩa của Green Store sẽ được lan tỏa đến nhiều người. Góp phần nhỏ vào việc bảo vệ môi trường.</i></p>
                 </div>
             </div>
         </div>
