--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4 py-5">
                     <h4 class="font-weight-bold mb-3"></h4>
-                    <p>Bạn đã nghe những lời kêu gọi này và muốn chung tay hành động. Nhưng có bao giờ bạn thắc mắc thế nào là sản phẩm tốt cho môi trường? Và đây là 4 tiêu chí của Green Store để bạn nhận biết dễ dàng:</p>
+                    <p>Một thế giới trong sạch, vạn tâm hồn trong xanh. Bạn đã nghe những lời kêu gọi này và muốn chung tay hành động. Nhưng có bao giờ bạn thắc mắc thế nào là sản phẩm tốt cho môi trường? Và đây là 4 tiêu chí của Green Store để bạn nhận biết dễ dàng:</p>
                     <p><i>Thứ nhất, có thể tái sử dụng nhiều lần. Việc dùng các sản phẩm có thể “xài” nhiều lần sẽ góp phần hạn chế rác thải xả ra môi trường. Từ đó, vừa góp phần ngăn chặn ô nhiễm vừa tiết kiệm chi phí trong xử lí rác thải.
                     </br>
                 </br>
